--- a/alpha/accounts/templates/userena/signin_form.html
+++ b/alpha/accounts/templates/userena/signin_form.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>
-        {% trans "Signin" %}
+        Sign In
     </h1>
     <div class="content account-options-wrapper">
         <div class="main-content account-options">
@@ -50,7 +50,7 @@
                         <input type="hidden" name="next" value="{{ next }}" />
                     {% endif %}
                 </div>
-                <input type="submit" class="submit standart button" value="{% trans "Signin" %}" />
+                <input type="submit" class="submit standart button" value="Sign In" />
             </form>
         </div>
     </div>
