--- a/alpha/event/templates/events/_browse_events_list.html
+++ b/alpha/event/templates/events/_browse_events_list.html
@@ -5,15 +5,15 @@
 
 <div class="entry-wrapper">
     <header>
-        Total search numbers found ({{eventsFilter.qs.count}})
+        Total search numbers found ({{eventsFilter.objects_list|length}})
     </header>
-    {% paginate 9 eventsFilter.qs as events %}
+    {% paginate 9 eventsFilter.objects_list as events %}
     {% for event in events %}    
-        <div class="entry-info" data-no-turbolink>
+        <div class="entry-info  home-page" data-no-turbolink>
             <div class="entry-img-prev">
-                <a href="{% url 'event_view' event.slug %}">
+                <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
                     {% if event.picture %}
-                        <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
+                        <img src="{% cropped_thumbnail event.event "cropping" width=60 %}" height="60px" weight="60px">
                     {% else %}
                         <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
                     {% endif %}
@@ -21,70 +21,19 @@
             </div>
             <div class="entry-details-wrapper">                                  
                 <div class="title">
-                    <a href="{% url 'event_view' event.slug %}">
+                    <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
                         {{event.name}}&nbsp;
                     </a>                    
                 </div>
                 <div class="entry-date">
-                    {{event.nearest_start_time|date:"l, F d, Y"}}
+                    {{event.start_time|date:"l, F d, Y"}}
                     <span class="delimeter">|</span>
-                    {{event.nearest_start_time|just_time}} - {{event.nearest_end_time|just_time}}
+                    {{event.start_time|just_time}} - {{event.end_time|just_time}}
                 </div>
                 <div class="entry-description">                    
                     {{ event.venue.name }}{% if event.venue.street %}, {{ event.venue.street }}{% endif %}, {{ event.venue.city.name_std }}
                 </div>                
-            </div>
-            <div class="auctions-wrapper">
-                <div class="auctions-content">
-                    <div class="auctions-img-prev">
-                        <a href="{% url 'event_view' event.slug %}">
-                            {% if event.picture %}
-                                <img src="{% cropped_thumbnail event "cropping" width=87 %}" height="87px" weight="87px">
-                            {% else %}
-                                <img src="{{STATIC_URL}}images/default-event.jpg" height="87px" weight="87px">
-                            {% endif %}
-                        </a>
-                    </div>
-                    <div class="auctions-details-wrapper">
-                        <div class="title">
-                            <a href="{% url 'event_view' event.slug %}">
-                                {{event.name}}&nbsp;
-                            </a>
-                        </div>
-                        <div class="entry-date">
-                            {{event.nearest_start_time|date:"l, F d, Y"}}
-                            <br>
-                            {{event.nearest_start_time|contextualize_date}} - {{event.nearest_end_time|just_time}}                                
-                        </div>
-                        <div class="auctions-additional">
-                            {{ event.venue.name }}
-                        </div>
-                    </div>
-                    <div class="auctions-actions"> 
-                        {% if event.tickets %}
-                            <a href="javascript:void()"  class="action-buy-tickets button" data-event-id="{{ event.id }}">
-                                Buy Tickets
-                            </a>
-                            {% buy_tickets_popup event %}
-                        {% endif %}
-
-                        <div class="remind-me-wrapper">                        
-                            <a href="javascript:void()"  class="action-remind-me button" data-event-id="{{ event.id }}">
-                                Remind Me                                
-                            </a>
-                            {% remind_me_popup event %}
-                        </div>
-                        
-                        <div class="in-the-loop-wrapper">
-                            <a href="javascript:void()" class="button action-in-the-loop">
-                                In the Loop
-                            </a>
-                            {% in_the_loop_popup event %}
-                        </div>                        
-                        <div href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" class="fb-like" data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" data-send="false" data-layout="button_count" data-width="20" data-show-faces="false" data-font="arial"></div>
-                    </div>
-                </div>
-            </div>
+            </div>            
         </div>
     {%endfor%}
 </div>
