--- a/alpha/event/templates/events/edit/edit_event.html
+++ b/alpha/event/templates/events/edit/edit_event.html
@@ -1,4 +1,4 @@
-{% extends 'events/create_event.html' %}
+{% extends 'events/create/create_event.html' %}
 {% block title %} > Edit Event > {{ event.name }}{% endblock %}
 
 {% block page_title %}
