--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -20,8 +20,8 @@
 
 {% block head %}
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/browse_event_list.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
 
     <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
@@ -45,7 +45,6 @@
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/browse/auctions-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/accounts/link_venue_to_account.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/advertising/stats.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript" ></script>
@@ -92,7 +91,7 @@
             <div class="account-details">
                 <header class="block-header">
                     {% if profile.user.get_full_name %}
-                        Vladimir Myskov <span class="nickname">({{ profile.user.username }})</span>
+                        {{ profile.user.get_full_name }} <span class="nickname">({{ profile.user.username }})</span>
                     {% else %}
                         <span class="nickname">{{ profile.user.username }}</span>
                     {% endif %}
@@ -110,12 +109,16 @@
 
     <div class="tabs-container">
         <ul class="tabs" data-page-id="profile-detail">
+            <li data-tab-id="account-events" {% if active_tab == "account-events" %}class="current"{% endif %}><span>{{ profile.user.username }} Events</span></li>
             <li data-tab-id="reminder" {% if active_tab == "reminder" %}class="current"{% endif %}><span>Reminder</span></li>
             <li data-tab-id="in-the-loop" {% if active_tab == "in-the-loop" %}class="current"{% endif %}><span>In the Loop</span></li>
             <li data-tab-id="advertising-stats" {% if active_tab == "advertising-stats" %}class="current"{% endif %}><span>Advertising Stats</span></li>
         </ul>
+        <div class="box{% if active_tab == "account-events" %} visible{% endif %}">
+            {% include 'accounts/_account_events_table.html' %}
+        </div>
         <div class="box{% if active_tab == "reminder" %} visible{% endif %}">
-            {% include 'accounts/_reminder_events_table.html' %}                            
+            {% include 'accounts/_reminder_events_table.html' %}
         </div>
         <div class="box{% if active_tab == "in-the-loop" %} visible{% endif %}">
             {% include 'accounts/_in_the_loop_events_table.html' %}
