--- a/alpha/accounts/templates/venue_accounts/private_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/private_venue_account.html
@@ -3,7 +3,6 @@
 {% load cropping %}
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/browse_event_list.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
@@ -18,7 +17,6 @@
     </script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js"></script>
-    <script src="{{STATIC_URL}}js/browse/auctions-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/accounts/venue_account.js"></script>
     <script src="{{STATIC_URL}}js/tabs.js"></script>
     
@@ -29,7 +27,7 @@
 {% block page %}
     <div class="primary-content">
         <h1>
-            {{ venue_account.venue.name }}
+            {{ venue_account.venue.name }}(<a href="{% url 'account_profile_detail' venue_account.account.user.username %}">{{ venue_account.account.user.username }}</a>)
         </h1>
         <div class="content account-profile">
             <div class="main-content account-profile">
@@ -114,7 +112,7 @@
                                     Website:
                                 </td>
                                 <td>
-                                    <a href="{{ venue_account.site }}">{{ venue_account.site }}</a>
+                                    <a href="{{ venue_account.site }}" target="_blank">{{ venue_account.site }}</a>
                                 </td>
                             </tr>
                         {% endif %}
@@ -124,10 +122,9 @@
                                     <img src="{{ STATIC_URL }}/images/fb_profile_icon.png"/>
                                 </td>
                                 <td>
-                                    Website:
-                                </td>
-                                <td>
-                                    <a href="{{ venue_account.facebook }}">{{ venue_account.facebook }}</a>
+                                    <a href="{{ venue_account.facebook }}" target="_blank">
+                                        Facebook
+                                    </a>
                                 </td>
                             </tr>
                         {% endif %}
@@ -137,10 +134,21 @@
                                     <img src="{{ STATIC_URL }}/images/twitter.png"/>
                                 </td>
                                 <td>
-                                    Twitter:
+                                    <a href="{{ venue_account.twitter }}" target="_blank">
+                                        Twitter
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endif %}
+                        {% if venue_account.myspace %}
+                            <tr>
+                                <td>
+                                    <img src="{{ STATIC_URL }}/images/myspace_profile_icon.png"/>
                                 </td>
                                 <td>
-                                    <a href="{{ venue_account.twitter }}">{{ venue_account.twitter }}</a>
+                                    <a href="{{ venue_account.myspace }}" target="_blank">
+                                        Myspace
+                                    </a>
                                 </td>
                             </tr>
                         {% endif %}
