--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -8,7 +8,7 @@
     <div class="event-details-block" data-no-turbolink>
         <div class="event-img">
             {% if event.picture %}
-                <img src="{% cropped_thumbnail event "cropping" width=175 %}" height="175px" weight="175px">
+                <img src="{% cropped_thumbnail event.event "cropping" width=175 %}" height="175px" weight="175px">
             {% else %}
                 <img src="{{STATIC_URL}}images/default-event.jpg" height="175px" weight="175px">
             {% endif %}
@@ -16,13 +16,13 @@
         <div class="event-details">
             <div class="title-wrapper">
                 <div class="title">
-                    <a href="{% url 'event_view' event.slug %}">{{event.name}}</a>
+                    <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">{{event.name}}</a>
                 </div>
                 {% if event.price and event.price != "$" %}
                     <div class="event-price {% if event.price|length < 9 %} short {% endif %}">{{event.price}}</div>
                 {% endif %}
             </div>
-            <div class="event-date-wrapper">{{event.nearest_start_time|date:"N d, Y fA | l"|title}}</div>                
+            <div class="event-date-wrapper">{{event.start_time|date:"N d, Y fA | l"|title}}</div>                
             <div class="event-description">
                 {{ event.venue.name }}<br>
                 {% if event.venue.street %}{{ event.venue.street }}<br>{% endif %}
@@ -33,7 +33,7 @@
                     {% if event.tickets %}
                     <tr>
                         <td>
-                            <a href="javascript:void()"  class="action-buy-tickets" data-event-id="{{ event.id }}">
+                            <a href="javascript:void()"  class="action-buy-tickets">
                                 Buy Tickets
                             </a>
                             {% buy_tickets_popup event %}
@@ -43,7 +43,7 @@
                     {% endif %}
                     <tr>                        
                         <td>
-                            <a href="javascript:void()" class="action-remind-me" data-event-id="{{ event.id }}">Remind Me</a>
+                            <a href="javascript:void()" class="action-remind-me" data-event-id="{{ event.event.id }}">Remind Me</a>
                             {% remind_me_popup event %}
                         </td>
                         <td class="in-the-loop-td">
@@ -54,11 +54,11 @@
                     <tr>
                         <td>
                             <a href="javascript:void;" class="action-facebook-like">                                
-                                <div href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" class="fb-like" data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" data-send="false" data-layout="button_count" data-width="20" data-show-faces="false" data-font="arial"></div>                                
+                                <div href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" class="fb-like" data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" data-send="false" data-layout="button_count" data-width="20" data-show-faces="false" data-font="arial"></div>                                
                             </a>
                         </td>
                         <td>
-                            <a href="https://twitter.com/intent/tweet?original_referer=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}&text={{event.name}}&tw_p=tweetbutton&url=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" class="action-tweet">
+                            <a href="https://twitter.com/intent/tweet?original_referer=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}&text={{event.name}}&tw_p=tweetbutton&url=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" class="action-tweet">
                                 Tweet
                             </a>                            
                         </td>
@@ -66,7 +66,7 @@
                 </table>
             </div>
         </div>
-        <div class="event-description">
+        <div class="event-description searchpad-event-description">
             {% if event.description %}
                 {{ event.description|safe }}
             {% endif %}            
@@ -88,12 +88,20 @@
                     <a href="/events/search/{{ pages.previous.url }}" class="ajax">
                         <img src="{{STATIC_URL}}images/entry-prev.png">
                     </a>
+                {% else %}
+                    <span>
+                        <img src="{{STATIC_URL}}images/entry-prev.png">
+                    </span>
                 {% endif %}
 
                 {% if not pages.current.is_last %}                
                     <a href="/events/search/{{ pages.next.url }}" class="ajax">
                         <img src="{{STATIC_URL}}images/entry-next.png">
                     </a>
+                {% else %}
+                    <span>
+                        <img src="{{STATIC_URL}}images/entry-next.png">
+                    </span>                    
                 {% endif %}                
             </span>
         </ul>
