--- a/alpha/event/templates/events/event_description_small.html
+++ b/alpha/event/templates/events/event_description_small.html
@@ -8,7 +8,7 @@
             <img src="{{STATIC_URL}}images/default-event.jpg" height="100px" weight="100px">
         {% endif %}
     </div>
-    <a href="{% url 'event_view' event.slug %}" class="text">{{ event.name }}</a>
+    <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" class="text">{{ event.name }}</a>
     <ul>
         {% load date_formatting %}
         <li>
@@ -21,7 +21,7 @@
     {% if citi_user_events %}
         <a class="edit" href="{% url 'event_edit' authentication_key=event.authentication_key %}">(Edit this event)</a>
     {% else %}
-        <a href="{% url 'event_view' event.slug %}" class="row"></a>
+        <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" class="row"></a>
     {% endif %}
 </li>
 <br/>
