--- a/alpha/event/templates/featured/featured_event.html
+++ b/alpha/event/templates/featured/featured_event.html
@@ -1,12 +1,12 @@
 {% load cropping %}
 {% load featured_event %}
 {% if in_email %}
-    <a target="_blank" href="{{site}}{% url 'event_view_featured' event.slug %}" style="color: #0066cc; font-size: 13px; font-weight: bold; font-family: sans-serif; text-decoration:none; border: none; display: block; line-height:0px;">
+    <a target="_blank" href="{{site}}{% url 'event_view_featured' event.slug event.start_time %}" style="color: #0066cc; font-size: 13px; font-weight: bold; font-family: sans-serif; text-decoration:none; border: none; display: block; line-height:0px;">
         <img src="{{site}}/{% feature_event_as_image event %}" style="border-collapse:collapse; border: none;" />
     </a>
 {% else %}
     <div class="features">
-        <a href="{% url 'event_view_featured' event.slug %}">
+        <a href="{% url 'event_view_featured' event.slug event.start_time|date:"Y-m-d" %}">
             <div class="featured-img-wrapper">
                 {% if event.picture %}
                     <img src="{% cropped_thumbnail event "cropping" width=154 %}" height="153px" width="154px">
@@ -17,17 +17,17 @@
             <div class="featured-img-details">
                 <div class="featured-img-details-wrapper">
                     <div class="featured-title">
-                        <a href="{% url 'event_view' event.slug %}?featured=1">{{event.name}}</a>
+                        <a href="{% url 'event_view_featured' event.slug event.start_time|date:"Y-m-d" %}">{{event.name}}</a>
                     </div>
                     <div class="featured-date">                                                                            
                         <!-- TODO: use event date range and time range -->
-                        {{ event.nearest_start_time|date:"b d, Y | fA"|title }}-{{event.nearest_end_time|date:"fA"|title}}
+                        {{ event.start_time|date:"b d, Y | fA"|title }}-{{event.end_time|date:"fA"|title}}
                     </div>
                     <div class="feature-venue">
                         {{ event.venue.name }}
                     </div>
                     <div class="featured-details-link">
-                        <a href="{% url 'event_view' event.slug %}?featured=1">
+                        <a href="{% url 'event_view_featured' event.slug event.start_time|date:"Y-m-d" %}">
                             event details
                         </a>
                     </div>
