--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -67,8 +67,8 @@
             </div>
         </div>
         <div class="event-description searchpad-event-description">
-            {% if event.description %}
-                {{ event.description|safe }}
+            {% if event.event_description %}
+                {{ event.event_description|safe }}
             {% endif %}            
         </div>
     </div>
